--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mui-formik": "^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
